# slides-mcp-server

./: .gitignore  README.md  env.example  pyproject.toml  setup.sh
.github/workflows/: publish-to-mcp-hive.yml
src/: __init__.py  drive_client.py  server.py  slides_tools.py
